# Bin2cpp

./: .gitignore  CMakeLists.txt  README.md
Source/: Main.cpp
